--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18-alpine
+FROM oven/bun:latest
 
 WORKDIR /app
 
@@ -6,7 +6,7 @@ RUN apk add --no-cache curl
 
 COPY package*.json ./
 
-RUN npm ci --only=production
+RUN bun install --frozen-lockfile --production
 
 COPY . .
 
@@ -15,4 +15,5 @@ EXPOSE 3001
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
   CMD curl -f http://localhost:3001/health || exit 1
 
-CMD ["node", "server.js"]
+CMD ["bun", "run", "start"]
+
